@@ -1,3 +1,8 @@
+2001-03-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* tools/dump-jax.c: Fixed a bug on non not-accessible INDEX
+	columns, reported by Joerg Mattes <joerg.mattes@nch.it>.
+
 2001-03-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* lib/check.c: Bill contributed more checks on group/compliance
